# openl-tablets-tool

./: .gitignore  NOTICE  README.md  ShopPolicy.xlsx  ShopPolicy2.json  ShopPolicy2.xlsx  ShopPolicy2_draft.xlsx  ShopPolicy2_rt.json  ShopPolicy3.json  ShopPolicy3_draft.xlsx  ShopPolicy3_rt.json  ShopPolicy_draft - コピー.xlsx  ShopPolicy_draft.xlsx  ShopPolicy_rt.json  docker-compose.yml  install.ps1  install.sh  pyproject.toml
deploy-service/: Dockerfile  deploy.py  pyproject.toml  service.py  templates.py
deploy-service/tests/: test_deploy.py  test_service.py  test_templates.py
deploy/azure/: README.md  container-group.yaml.template  deploy.sh  start.sh  stop.sh
docs/superpowers/plans/: 2026-06-09-openl-cloud-deploy-plan.md  2026-06-12-inplace-patch-writer.md  2026-06-12-schema-cleanup-position-tracking.md
docs/superpowers/specs/: 2026-06-09-openl-cloud-deploy-design.md  2026-06-12-inplace-patch-writer-design.md
examples/: AutoPolicyCalculation.json  ShopPolicy.json
openl/: __init__.py  cli.py  models.py  patch_writer.py  reader.py  writer.py
skills/openl-edit/: SKILL.md
skills/openl-lib/: SCHEMA.md
skills/openl-new/: SKILL.md
skills/openl-tablets-create/: SKILL.md
skills/openl-tablets-deploy/: SKILL.md
skills/openl-tablets-edit/: SKILL.md
tests/: test_cli_write.py  test_patch_writer.py  test_read_with_positions.py  test_roundtrip.py  test_schema_cleanup.py
