[project]
name = "openl-deploy-service"
version = "0.1.0"
description = "Upload service that deploys OpenL Tablets Excel rule files to a running OpenL Tablets instance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
